force-app/main/default/objects/Well_Operation__c/Well_Operation__c.object-meta.xml
<CustomObject>
    <label>Well Operation</label>
    <description>Records well operational activities including status changes, workovers, stimulation, and maintenance interventions.</description>
    <nameField>
        <label>Operation</label>
        <type>AutoNumber</type>
        <displayFormat>{0000}</displayFormat>
    </nameField>
    <pluralLabel>Well Operations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>