force-app/main/default/objects/Well_Operation__c/fields/AFE_Amount__c.field-meta.xml
<CustomField>
    <fullName>AFE_Amount__c</fullName>
    <label>AFE Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>