force-app/main/default/objects/Well_Operation__c/fields/AFE_Number__c.field-meta.xml
<CustomField>
    <fullName>AFE_Number__c</fullName>
    <label>AFE Number</label>
    <type>Text</type>
    <length>255</length>
</CustomField>