force-app/main/default/objects/Well_Operation__c/fields/Daily_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Report__c</fullName>
    <label>Daily Report</label>
    <type>TextArea</type>
    
</CustomField>