force-app/main/default/objects/Well_Operation__c/fields/Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Operation_Date__c</fullName>
    <label>Operation Date</label>
    <type>Date</type>
</CustomField>