force-app/main/default/objects/Well_Operation__c/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Drilling</fullName>
            </value>
            <value>
                <fullName>Completion</fullName>
            </value>
            <value>
                <fullName>Workover</fullName>
            </value>
            <value>
                <fullName>Plug and Abandon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>