force-app/main/default/objects/Well_Operation__c/fields/Performed_By__c.field-meta.xml
<CustomField>
    <fullName>Performed_By__c</fullName>
    <label>Performed By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Well_Operation_Performed_By</relationshipName>
</CustomField>