force-app/main/default/objects/Well_Operation__c/fields/Rig_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Rig_Contractor__c</fullName>
    <label>Rig Contractor</label>
    <type>Text</type>
    <length>255</length>
</CustomField>