force-app/main/default/objects/Well_Operation__c/fields/Well__c.field-meta.xml
<CustomField>
    <fullName>Well__c</fullName>
    <label>Well</label>
    <referenceTo>Well__c</referenceTo>
    <relationshipLabel>Well Operations</relationshipLabel>
    <relationshipName>Well_Operations</relationshipName>
    <type>MasterDetail</type>
</CustomField>